@@ -17,6 +17,8 @@ pats = '(' +
    "^	  vcd_demo.right",
    '^-- ',
    '^-+$',
+   '^<<+$',
+   '^>>+$',
    '^\s*$',
   ].join('|') + ')'
 # puts pats
